# TransformerEngine

./: CLAUDE.md  setup.py  test.py
benchmarks/: CMakeLists.txt
benchmarks/benchmarkable/: __init__.py  api.py  artifacts.py  compare.py  discovery.py  runner.py  timing.py
benchmarks/gemm/: benchmark_gemm.py
benchmarks/linear/: benchmark_grouped_fp8_block_quantize.py  benchmark_grouped_fp8_block_quantize_native.cu  benchmark_grouped_linear.py  benchmark_grouped_linear_fp8_block.py  benchmark_linear.py
build_tools/: jax.py  pytorch.py  utils.py
cublasmplite/: CMakeLists.txt  README.md  cublasmp.cu  cublasmplite.h  cuda.cu  gemm_rs.cu  gemm_rs.hpp
cublasmplite/libcublasmplite/: CMakeLists.txt
cublasmplite/libcublasmplite/include/: cublasmplite.h  macros.hpp.inc
cublasmplite/libcublasmplite/src/: cublasmplite.cu  cuda.cu  nvshmem.cu
cublasmplite/tests/: ag_gemm.cu  mpi_helpers.hpp  nccl_helpers.hpp  timings_helpers.hpp
docs/: index.rst
docs/examples/: benchmarkable_tests.rst  multi_gpu_training.ipynb
examples/jax/comm_gemm_overlap/: comm_gemm_overlap.py
examples/jax/comm_overlap/: layer_prim_with_overlap.py
examples/pytorch/comm_gemm_overlap/: ln_mlp_with_overlap.py  run_overlap.sh  te_layer_with_overlap.py  test_gemm.py  test_ln_mlp.py  test_ln_mlp.sh
qa/L0_pytorch_benchmark_profiling_smoke/: test.sh
tests/benchmarkable/: test_compare.py  test_runner_and_artifacts.py
tests/cpp/operator/: CMakeLists.txt  test_cast_fp8_block_scaling_grouped.cu
tests/jax/: conftest.py  test_benchmarkable_softmax.py  test_custom_call_compute.py
tests/pytorch/: conftest.py  test_benchmarkable_permutation.py  test_fp8_block_group_quantize.py  test_grouped_tensor.py
tests/pytorch/distributed/: run.sh  run_gemm_blocking.py  run_gemm_with_overlap.py  run_transformer_layer_with_overlap.py  test_comm_gemm_overlap.py
transformer_engine/common/: CMakeLists.txt  common.h  pybind.cpp  transformer_engine.cpp
transformer_engine/common/cast/dispatch/: quantize.cuh
transformer_engine/common/cast/fp8/: group_quantize_fp8_block_scaling.cuh  group_quantize_fp8_blockwise.cu  group_quantize_fp8_blockwise.cuh  group_quantize_fp8_blockwise.h
transformer_engine/common/comm_gemm_overlap/: comm_gemm_overlap.cpp
transformer_engine/common/comm_gemm_overlap/userbuffers/: userbuffers-host.cpp  userbuffers.h
transformer_engine/common/cublasmplite/: CMakeLists.txt  README.md
transformer_engine/common/cublasmplite/libcublasmplite/: CMakeLists.txt
transformer_engine/common/cublasmplite/libcublasmplite/include/: cublas_helpers.hpp  cublasmplite.h  cuda_helpers.hpp  gemm.hpp  macros.hpp.inc  vector.hpp
transformer_engine/common/cublasmplite/libcublasmplite/src/: cublasmplite.cu  cuda.cu  nvshmem.cu  nvshmem_comm.cu  nvshmem_comm.hpp  nvshmem_p2p_pipelined.cu  nvshmem_reduce_scatter.cu
transformer_engine/common/cublasmplite/tests/: CMakeLists.txt  ag_gemm.cu  ag_gemm_bench.sh  gemm_rs.cu  gemm_rs.hpp  gemm_rs_atomic.cu  helpers.hpp  macros.hpp.inc  mpi_helpers.hpp  nccl_helpers.hpp  timings_helpers.hpp
transformer_engine/common/fused_attn/: fused_attn_f16_arbitrary_seqlen.cu  fused_attn_f16_max512_seqlen.cu  fused_attn_fp8.cu
transformer_engine/common/fused_router/: utils.h
transformer_engine/common/include/transformer_engine/: comm_gemm_overlap.h  transformer_engine.h
transformer_engine/common/transpose/: cast_transpose.h  quantize_transpose_square_blockwise.cu
transformer_engine/common/userbuffers/: comm_gemm_overlap.cpp  comm_gemm_overlap.h
transformer_engine/common/userbuffers/nvshmem/: CMakeLists.txt  README.md  cublas_helpers.hpp  cuda.cu  gemm.hpp  gemm_rs.hpp  gemm_rs_atomic.cu  mpi_helpers.hpp  te_nvshmem.cu  te_nvshmem.h
transformer_engine/common/util/: dlpack_helper.h  pybind_helper.h  string.h
transformer_engine/jax/: attention.py  dense.py  layernorm_dense.py  layernorm_mlp.py  sharding.py
transformer_engine/jax/cpp_extensions/: __init__.py  comm_gemm_overlap.py  gemm.py  grouped_gemm.py  misc.py
transformer_engine/jax/csrc/: extensions.h
transformer_engine/jax/csrc/extensions/: comm_gemm_overlap.cpp  gemm.cpp  misc.cpp  misc.h  packing.cpp  pybind.cpp  utils.h
transformer_engine/jax/flax/: module.py
transformer_engine/jax/quantize/: tensor.py
transformer_engine/pytorch/: __init__.py
transformer_engine/pytorch/csrc/: comm_gemm_overlap.h  extensions.h  quantizer.cpp  type_converters.cpp
transformer_engine/pytorch/csrc/extensions/: cast.cpp  comm_gemm_overlap.cpp  misc.cu  pybind.cpp
transformer_engine/pytorch/csrc/nvshmem/: ag_gemm.cu  cublasmp.cu  gemm_rs.cu  helpers.hpp  macros.hpp.inc  te_nvshmem.cu  timings_helpers.hpp
transformer_engine/pytorch/csrc/userbuffers/: CMakeLists.txt  ipcsocket.h  userbuffers-host.cpp  userbuffers.cu  userbuffers.h
transformer_engine/pytorch/module/: __init__.py  _common.py  base.py  grouped_linear.py  layernorm_linear.py  layernorm_mlp.py  linear.py
transformer_engine/pytorch/ops/: op.py
transformer_engine/pytorch/ops/basic/: grouped_linear.py
transformer_engine/pytorch/tensor/: grouped_tensor.py
transformer_engine/pytorch/tensor/storage/: grouped_tensor_storage.py
